scripts/kubernetes/ecommerce_product_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-svc
  labels:
    app: product-svc
spec:
  selector:
    app: product-svc
  ports:
    - name: grpc-product-svc 
      protocol: TCP
      port: 50051
      targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-svc
  labels:
    app: product-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-svc
      version: v1
  template:
    metadata:
      labels:
        app: product-svc
        version: v1
    spec:
      containers:
        - name: product-svc
          image: ghcr.io/sony-nurdianto/product_svc:v0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
              name: http
              protocol: TCP
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: github-secrets
