scripts/kubernetes/ecommerce_web.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-web
  labels:
    app: ecommerce-web
spec:
  selector:
    app: ecommerce-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-web
  labels:
    app: ecommerce-web
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-web
      version: v1
  template:
    metadata:
      labels:
        app: ecommerce-web
        version: v1
    spec:
      containers:
        - name: ecommerce-web
          image: ghcr.io/sony-nurdianto/ecommerce_web:v0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: github-secrets
